1599079262 | 63 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/config/vrcompositor_actions.json,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/localization/vrmonitor_brazilian.json,  M resources/webinterface/dashboard/localization/vrmonitor_bulgarian.json,  M resources/webinterface/dashboard/localization/vrmonitor_czech.json,  M resources/webinterface/dashboard/localization/vrmonitor_danish.json,  M resources/webinterface/dashboard/localization/vrmonitor_dutch.json,  M resources/webinterface/dashboard/localization/vrmonitor_finnish.json,  M resources/webinterface/dashboard/localization/vrmonitor_french.json,  M resources/webinterface/dashboard/localization/vrmonitor_german.json,  M resources/webinterface/dashboard/locali
https://steamdb.info/patchnotes/5494827/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/welcome_panel.xml
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/welcome_panel.xml
@@ -13,6 +13,7 @@
 					<Label class="UpdateDescTouch" text="#WelcomePanel_UpdateDescTouch" />
           <Label class="UpdateDescKnuckles" text="#WelcomePanel_UpdateDescKnuckles" />
           <Label class="UpdateDescCosmos" text="#WelcomePanel_UpdateDescCosmos" />
+          <Label class="UpdateDescReverbG2" text="#WelcomePanel_UpdateDescReverbG2" />
         </Panel>
 				<Panel class="Slideshow_Wrapper">
 					<Panel class="Slideshow">
@@ -46,6 +47,7 @@
           <Image class="WinMRImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_winmr_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
           <Image class="KnucklesImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_knuckles_png.vtex" />
           <Image class="CosmosImage" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_cosmos_png.vtex" />
+          <Image class="ReverbG2Image" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_reverbg2_png.vtex" />
           <Image class="Controller" src="s2r://panorama/images/welcome_panel/destinations_welcome_black_controller_png.vtex" />	
 				</Panel>	
 			</Panel>
