1609992490 | 32 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.html,  M resources/webinterface/dashboard/systemreportviewer.html,  M resources/webinterface/dashboard/systemui.html,  M resources/webinterface/dashboard/vrmonitor.html,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libengine2_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libpanorama_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librenderingpipelines_strings.txt,  M tools/steamvr_environmen
https://steamdb.info/patchnotes/6048431/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/styles/welcome_panel.css
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/styles/welcome_panel.css
@@ -90,6 +90,8 @@ DestinationsWelcomePanel {
 .TouchController .PressBOrYButton,
 .RiftSController .RiftSImage,
 .RiftSController .PressBOrYButton,
+.Quest2Controller .RiftSImage,
+.Quest2Controller .PressBOrYButton,
 .KnucklesController .KnucklesImage,
 .KnucklesController .PressBButton,
 .CosmosController .CosmosImage,
@@ -107,6 +109,8 @@ DestinationsWelcomePanel {
 .TouchController .PressMenuButton,
 .RiftSController .MotionController,
 .RiftSController .PressMenuButton,
+.Quest2Controller .MotionController,
+.Quest2Controller .PressMenuButton,
 .KnucklesController .MotionController,
 .KnucklesController .PressMenuButton,
 .CosmosController .MotionController,
@@ -189,6 +193,7 @@ DestinationsWelcomePanel {
 .GamepadController .UpdateDescController,
 .TouchController .UpdateDescTouch,
 .RiftSController .UpdateDescTouch,
+.Quest2Controller .UpdateDescTouch,
 .KnucklesController .UpdateDescKnuckles,
 .CosmosController .UpdateDescCosmos,
 .ReverbG2Controller .UpdateDescReverbG2
@@ -200,6 +205,7 @@ DestinationsWelcomePanel {
 .GamepadController .UpdateDesc,
 .TouchController .UpdateDesc,
 .RiftSController .UpdateDesc,
+.Quest2Controller .UpdateDesc,
 .KnucklesController .UpdateDesc,
 .CosmosController .UpdateDesc,
 .ReverbG2Controller .UpdateDesc
