1625702712 | 23 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.html,  M resources/webinterface/dashboard/systemreportviewer.html,  M resources/webinterface/dashboard/systemui.html,  M resources/webinterface/dashboard/vrmonitor.html,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libvr_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak01
https://steamdb.info/patchnotes/7007992/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/styles/welcome_panel.css
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/styles/welcome_panel.css
@@ -97,9 +97,11 @@ DestinationsWelcomePanel {
 .CosmosController .CosmosImage,
 .CosmosController .PressBOrYButton,
 .ReverbG2Controller .ReverbG2Image,
-.ReverbG2Controller .PressBOrYButton
+.ReverbG2Controller .PressBOrYButton,
+.GenericTrackedController .RiftSImage,
+.GenericTrackedController .PressBOrYButton
 {
-	visibility: visible;	
+	visibility: visible;
 }
 
 // if it's a gamepad or a touch, hide vive controller bits
@@ -116,9 +118,11 @@ DestinationsWelcomePanel {
 .CosmosController .MotionController,
 .CosmosController .PressMenuButton,
 .ReverbG2Controller .MotionController,
-.ReverbG2Controller .PressMenuButton
+.ReverbG2Controller .PressMenuButton,
+.GenericTrackedController .MotionController,
+.GenericTrackedController .PressMenuButton,
 {
-	visibility: collapse;	
+	visibility: collapse;
 }
 
 //
@@ -196,9 +200,10 @@ DestinationsWelcomePanel {
 .Quest2Controller .UpdateDescTouch,
 .KnucklesController .UpdateDescKnuckles,
 .CosmosController .UpdateDescCosmos,
-.ReverbG2Controller .UpdateDescReverbG2
+.ReverbG2Controller .UpdateDescReverbG2,
+.GenericTrackedController .UpdateDescTouch
 {
-	visibility: visible;	
+	visibility: visible;
 }
 
 // if it's a gamepad or a touch, hide the irrelevant bits
@@ -208,9 +213,10 @@ DestinationsWelcomePanel {
 .Quest2Controller .UpdateDesc,
 .KnucklesController .UpdateDesc,
 .CosmosController .UpdateDesc,
-.ReverbG2Controller .UpdateDesc
+.ReverbG2Controller .UpdateDesc,
+.GenericTrackedController .UpdateDesc
 {
-	visibility: collapse;	
+	visibility: collapse;
 }
 
 .UpdateText {
