1628008725 | 22 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.html,  M resources/webinterface/dashboard/systemreportviewer.html,  M resources/webinterface/dashboard/systemui.html,  M resources/webinterface/dashboard/vrmonitor.html,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panoram
https://steamdb.info/patchnotes/7131982/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
@@ -5673,6 +5673,11 @@ AvatarCustomizationItem #SliderThumb
 {
 	visibility: visible;
 }
+.GenericTrackedController .item_def_generic_tracked_controllers
+{
+	visibility: visible;
+}
+
 /* The Vive Focus 3 is the first controller we're falling back to GenericTrackedController for, and it doesn't provide hand (finger) animation data
 .GenericTrackedController .item_def_full_hands
 {
