--- a/resources/webinterface/dashboard/css/systemui.css
+++ b/resources/webinterface/dashboard/css/systemui.css
@@ -2105,11 +2105,22 @@ div.BindingCalloutModifierIcon
 	min-width: 5em;
 }
 
+.DashboardMain .OverlayControlBarBackground {
+    width: 736px;
+    height: 80px;
+    background-image: var(--background-image);
+    background-size: cover;
+    background-position: top center;
+    margin: 0px;
+	border-bottom-left-radius: 7px;
+	border-bottom-right-radius: 7px;
+}
+
 .DashboardMain .OverlayControlBar
 {
 	display: flex;
 	flex-direction: row;
-	background: var( --dashboard-control-bar-group-color-a );
+	background: none;
 	padding: 0;
 	width: 100%;
 	box-sizing: border-box;
