1652742976 | 53 files | M bin/linux64/libprism_strings.txt,  M bin/linux64/vrclient_strings.txt,  M bin/version.txt,  M bin/vrclient_strings.txt,  M bin/vrclient_x64_strings.txt,  M bin/vrwebhelper/win64/openvr_api_strings.txt,  M bin/win32/imagetool_strings.txt,  M bin/win32/nrfserlib_strings.txt,  M bin/win32/openvr_api_strings.txt,  M bin/win32/vivelinklib_strings.txt,  M bin/win64/imagetool_strings.txt,  M bin/win64/nrfserlib_strings.txt,  M bin/win64/openvr_api_strings.txt,  M bin/win64/openxr_loader_strings.txt,  M bin/win64/prism_strings.txt,  M bin/win64/vivelinklib_strings.txt,  M bin/win64/vrdesktop_graphics_capture_strings.txt,  M bin/win64/vrdesktop_strings.txt,  M bin/win64/winrtdisplay_strings.txt,  M drivers/gamepad/bin/win32/driver_gamepad_strings.txt,  M drivers/gamepad/bin/win64/driver_gamepad_strings.txt,  M drivers/lighthouse/bin/linux32/driver_lighthouse_strings.txt,  M drivers/lighthouse/bin/linux64/driver_lighthouse_strings.txt,  M drivers/lighthouse/bin/win32/aitcamlib_strings.txt,  M drivers/lighthouse/bin/w
https://steamdb.info/patchnotes/8751053/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
@@ -5664,8 +5664,7 @@ AvatarCustomizationItem #SliderThumb
 {
 	visibility: visible;
 }
-.WinMRController .item_def_windowsmr_controllers,
-.ReverbG2Controller .item_def_full_hands
+.WinMRController .item_def_windowsmr_controllers
 {
 	visibility: visible;
 }
@@ -5677,13 +5676,10 @@ AvatarCustomizationItem #SliderThumb
 {
 	visibility: visible;
 }
-
-/* The Vive Focus 3 is the first controller we're falling back to GenericTrackedController for, and it doesn't provide hand (finger) animation data
-.GenericTrackedController .item_def_full_hands
+.ControllerHasFingerTracking .item_def_full_hands
 {
 	visibility: visible;
 }
-*/
 
 .item_def_vive_headset,
 .item_def_vive_pro_headset,
