--- a/resources/webinterface/dashboard/css/controllerbinding.css
+++ b/resources/webinterface/dashboard/css/controllerbinding.css
@@ -42,7 +42,6 @@ html.VROverlay
 
 .Tab
 {
-	max-width: 20vw;
 	opacity: 1.0;
 	font-size: 1.5rem;
 	text-align: center;
@@ -215,6 +214,28 @@ html.VROverlay
 .PageTitleBar .TitleBarSection.RightBackButton
 {
 	opacity: 0;
+}
+
+.PageTitleBar .TitleBarSection.OptionsButton
+{
+	font-size: 1rem;
+	border: none;
+	font-weight: bold;
+	background: var(--backbuttonbackground);
+	margin: auto 0;
+	/* padding: 0 6px; */
+	margin-right: 1rem;
+	height: 100%;
+	width: fit-content;
+	flex: 0;
+	margin-left: auto;
+	align-items: center;
+	padding: .5rem;
+	padding-left: 1rem;
+
+	transition-property: background-color;
+	transition-timing-function: ease-out;
+	transition-duration: var(--button-fade-time);
 }
 
 .PageTitleBar .PageTitleBackButton:hover
@@ -2245,6 +2266,16 @@ input.ActionAliasUserSuppliedName {
 }
 
 .tippy-tooltip.BindingLabel-theme
+{
+	font-size: 1rem;
+}
+
+.tippy-tooltip.MainButton-theme
+{
+	font-size: 1rem;
+}
+
+.tippy-tooltip.OptionsItem-theme
 {
 	font-size: 1rem;
 }
