--- a/resources/webinterface/dashboard_prettier/controllerbinding.css
+++ b/resources/webinterface/dashboard_prettier/controllerbinding.css
@@ -36,7 +36,6 @@ html.VROverlay {
 }
 
 .Tab {
-  max-width: 20vw;
   opacity: 1;
   font-size: 1.5rem;
   text-align: center;
@@ -186,6 +185,27 @@ html.VROverlay {
 
 .PageTitleBar .TitleBarSection.RightBackButton {
   opacity: 0;
+}
+
+.PageTitleBar .TitleBarSection.OptionsButton {
+  font-size: 1rem;
+  border: none;
+  font-weight: bold;
+  background: var(--backbuttonbackground);
+  margin: auto 0;
+  /* padding: 0 6px; */
+  margin-right: 1rem;
+  height: 100%;
+  width: fit-content;
+  flex: 0;
+  margin-left: auto;
+  align-items: center;
+  padding: 0.5rem;
+  padding-left: 1rem;
+
+  transition-property: background-color;
+  transition-timing-function: ease-out;
+  transition-duration: var(--button-fade-time);
 }
 
 .PageTitleBar .PageTitleBackButton:hover {
@@ -1971,5 +1991,13 @@ input.ActionAliasUserSuppliedName {
 }
 
 .tippy-tooltip.BindingLabel-theme {
+  font-size: 1rem;
+}
+
+.tippy-tooltip.MainButton-theme {
+  font-size: 1rem;
+}
+
+.tippy-tooltip.OptionsItem-theme {
   font-size: 1rem;
 }
